login now working onto dasboards made some changes too

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://fortuneosuh04:Estherken12@cluster0.hpbq7.mongodb.net/freelancerhub?retryWrites=true&w=majority&appName=Cluster0 JWT_SECRET=mysecretkey123
+MONGO_URI=mongodb+srv://fortuneosuh04:Estherken12@cluster0.hpbq7.mongodb.net/freelancerhub?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=your-very-long-random-secret-key-1234567890
